initial auth-pug-css commit

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -10,11 +10,15 @@ block content
    div(class="authContainer")
       img(src="./images/logo-large.png" alt="Remember the Juice Logo" class="logoLarge")
       div(class="authForms")
-          form(method="post" action="/")
+          form(method="post" action="/signup")
           input(type="text" name="username" placeholder="username" required)
           br
-          input(type="password" name="passowrd" placeholder="password" required)
+          input(type="text" name="email" placeholder="email" required)
           br
-          button(class="loginButton" type="submit") Login
+          input(type="password" name="password" placeholder="password" required)
+          br
+          input(type="password" name="confirmPassword" placeholder="confirm password" required)
+          br
+          button(class="signUpButton" type="submit" ) Sign me up!
           p or
-          button(class="signUpButton" type="button" src="/signup") Sign Up
+          button(class="loginButton" src="/") Return to Login
