--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,7 @@
-h1 {
-    color: #555555;
+html {
+    background-color: #68cdad;
+    padding: 0px;
+    font-family: Helvetica, sans-serif;
+    font-size: 13px;
 }
+
