--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,8 @@ doctype html
 html
   head
       block head
-        title="Express Starter App"
-        link(rel='stylesheet' href='/stylesheets/reset.css')
+        title="Remember the Juice"
+        link(rel='stylesheet' href='/stylesheets/index.css')
   body
     block content
+   
