Working on login functionality

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,10 +11,11 @@ block content
       img(src="./images/logo-large.png" alt="Remember the Juice Logo" class="logoLarge")
       div(class="authForms")
           form(method="post" action="/")
-          input(type="text" name="username" placeholder="username" required)
-          br
-          input(type="password" name="passowrd" placeholder="password" required)
-          br
-          button(class="loginButton" type="submit") Login
-          p or
-          button(class="signUpButton" type="button" src="/signup") Sign Up
+            input(type='hidden' name='_csrf' value=csrfToken)
+            input(type="text" name="username" placeholder="username" required)
+            br
+            input(type="password" name="passowrd" placeholder="password" required)
+            br
+            button(class="loginButton" type="submit") Login
+            p or
+            button(class="signUpButton" type="button" src="/signup") Sign Up
