--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,14 @@
 html {
     background-color: #68cdad;
     padding: 0px;
-    font-family: Helvetica, sans-serif;
+    font-family: 'Mukta', sans-serif;
     font-size: 13px;
+    color: white
 }
 
+h2 {
+    font-family: 'Lilita One', cursive;
+    font-size: 50px;
+    font-weight: 300;
+    color: rgba(255,255,255,.75);
+}
