--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
       block head
         title="Remember the Juice"
         link(rel='stylesheet' href='/stylesheets/index.css')
+        link(rel="preconnect" href="https://fonts.gstatic.com")
+        link(href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Mukta:wght@200;300;400;600;800&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet")
   body
     block content
-   
