--- a/views/signup.pug
+++ b/views/signup.pug
@@ -11,14 +11,15 @@ block content
       img(src="./images/logo-large.png" alt="Remember the Juice Logo" class="logoLarge")
       div(class="authForms")
           form(method="post" action="/signup")
-          input(type="text" name="username" placeholder="username" required)
+          input(type="text" name="username" placeholder="USERNAME..." required)
           br
-          input(type="text" name="email" placeholder="email" required)
+          input(type="text" name="email" placeholder="EMAIL..." required)
           br
-          input(type="password" name="password" placeholder="password" required)
+          input(type="password" name="password" placeholder="PASSWORD...accordion-heading" required)
           br
-          input(type="password" name="confirmPassword" placeholder="confirm password" required)
+          input(type="password" name="confirmPassword" placeholder="CONFIRM PASSWORD..." required)
           br
-          button(class="signUpButton" type="submit" ) Sign me up!
-          p or
-          button(class="loginButton" src="/") Return to Login
+          div(class="authFooter")
+            button(class="signUpButton" type="submit" ) Sign me up!
+            p or
+            button(class="loginButton" src="/") Return to Login
