Working on user login feature

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ block content
             input(type='hidden' name='_csrf' value=csrfToken)
             input(type="text" name="username" placeholder="username" required)
             br
-            input(type="password" name="passowrd" placeholder="password" required)
+            input(type="password" name="password" placeholder="password" required)
             br
             button(class="loginButton" type="submit") Login
             p or
