added demo button and error handling

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,7 @@
 html {
     background-color: #68cdad;
     padding: 0px;
-    font-family: 'Mukta', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 13px;
     color: white
 }
