--- a/public/stylesheets/login-signup.css
+++ b/public/stylesheets/login-signup.css
@@ -28,7 +28,7 @@ input {
     font-family: 'Lilita One', cursive;
     font-size: 25px;
     color: white;
-    margin-bottom: 15px;
+    margin-top: 15px;
     box-sizing: border-box;
 }
 
@@ -51,6 +51,23 @@ input {
 
 .signUpButton {
     background-image: url("bluebutton.png");
+    background-size: cover;
+    border: none;
+    color: rgba(255,255,255,.75);
+    font-size: 25px;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    padding: 5px 25px 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,.30);
+    display: inline-block;
+}
+
+
+.demoButton {
+    background-image: url("greenbutton.png");
     background-size: cover;
     border: none;
     color: rgba(255,255,255,.75);
