fixed logo error

--- a/public/stylesheets/login-signup.css
+++ b/public/stylesheets/login-signup.css
@@ -85,8 +85,9 @@ input {
 .authFooter {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: space-between;
+    margin-top: 20px;
 }
