--- a/views/signup.pug
+++ b/views/signup.pug
@@ -8,7 +8,7 @@ append head
 
 block content
     div(class="authContainer")
-      img(src="./images/logo-large.png" alt="Remember the Juice Logo" class="logoLarge")
+      img(src="../images/logo-large.png" alt="Remember the Juice Logo" class="logoLarge")
       div(class="authForms")
           form(method="post" action="/users/signup")     
             input(type='hidden' name='_csrf' value=csrfToken)
