Add demo user functionality

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,5 +21,5 @@ block content
                   li= error
             div(class="authFooter")
               button(class="loginButton" type="submit") Login
-              button(class="demoButton" type="button") Demo Login
-              button(class="signUpButton" type="button" src="/signup") Sign Up
+              button(class="demoButton" type="button" onclick="location.href='/users/demo'") Demo Login
+              button(class="signUpButton" type="submit" onclick="location.href='/users/signup'") Sign Up
