--- a/views/signup.pug
+++ b/views/signup.pug
@@ -25,5 +25,5 @@ block content
                         li= error
             div(class="authFooter")
               button(class="signUpButton" type="submit" ) Sign up
-              button(class="demoButton" type="button") Demo
-              button(class="loginButton" src="/") Back to Login
+              button(class="demoButton" type="button" onclick="location.href='/users/demo'") Demo
+              button(class="loginButton" onclick="location.href='../'") Back to Login
