--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -3,7 +3,7 @@ html {
     padding: 0px;
     font-family: 'Quicksand', sans-serif;
     font-size: 13px;
-    color: white
+    color: black
 }
 
 h2 {
