Update routes to use req.session.auth.userId, made demo user more functional, rearranged/renamed routes to be more readable

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -25,5 +25,5 @@ block content
                         li= error
             div(class="authFooter")
               button(class="signUpButton" type="submit" ) Sign up
-              button(class="demoButton" type="button" onclick="location.href='/users/demo'") Demo
+              button(class="demoButton" type="button" onclick="location.href='/demo'") Demo
               button(class="loginButton" onclick="location.href='../'") Back to Login
