--- a/views/main.pug
+++ b/views/main.pug
@@ -35,7 +35,7 @@ block content
                     each listName in lists
                         li= listName.listName
                 div.new_list
-                form(method="post" action=`/lists/`)
+                form(method="post" action=`/lists`)
                     input(type="text" name="listName" placeholder="Create list...")
                     button(type="submit")
                 
@@ -47,7 +47,7 @@ block content
                     p.tasks_incomplete Tasks
                     p.tasks_complete Completed
             div.main_right_botbox
-                form(action=`/users/${userId}` method="post" class="task")
+                form(action=`/tasks` method="post" class="task")
                     input(type="text" name="taskContent" placeholder="Add task here...")
                     button(type="submit")
                 if allTasks
