--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,9 @@
 html {
-    background-color: #68cdad;
+    background-color: #c0ebe0;
     padding: 0px;
     font-family: 'Quicksand', sans-serif;
     font-size: 13px;
-    color: black
+    color: #4c4e54;
 }
 
 h2 {
