--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 .main {
-    background-color: whitesmoke;
+    background-color: white;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 250px 1fr;
@@ -20,8 +20,13 @@ li {
     padding-bottom: 10px;
 }
 
+.navbar_hamburger {
+    width:40px;
+    display: inline-block;
+}
+
 .main_left {
-    background-color: rgb(60, 240, 171);
+    background-color: #68cdad;
     display: grid;
     grid-template-rows: 150px 1fr;
     width: 250px;
@@ -46,13 +51,17 @@ li {
 }
 
 .lists {
-    font-size: 16px;
+    font-size: 15px;
     padding-bottom: 0px;
+    margin: 0px 20px 20px 40px;
 }
 
 .main_left_menu_title {
-    color: rgb(108, 108, 255);
-    font-weight: bold;
+    font-size: 22px;
+    color: #157afd;
+    font-weight: 700;
+    margin: 0px 0px 10px 0px;
+    text-shadow: 1px 1px 3px rgba(107, 119, 118, .5);
 }
 
 .main_right {
@@ -62,7 +71,7 @@ li {
 }
 
 .main_right_topbox {
-    background-color: rgb(173, 255, 200);
+    background-color: #c0ebe0;
     display: grid;
     grid-template-rows: 1fr 1fr;
     height: 100%;
@@ -75,21 +84,25 @@ li {
 }
 
 .tasks_category {
+    font-size: 16px;
+    text-shadow: 1px 1px 3px rgba(107, 119, 118, .5);
+    margin: 0px 0px 10px 0px;
     height: 100%;
     display: grid;
-    grid-template-columns: 50px 50px 1fr;
+    grid-template-columns: 120px 0px 1fr;
 
 }
 
 .tasks_incomplete {
-    color: rgb(108, 108, 255);
+    color: #157afd;
 }
 
-.main_right_botbox{
-    background-color: whitesmoke;
-
-    height: 200px;
-    padding: 10px;
+.main_right_bottombox{
+    background-color: white;
+    display: grid;
+    grid-template-rows: 30px 0px 1fr;
+    padding: 20px 0px 0px 20px;
+   
 }
 
 .tasks {
@@ -100,5 +113,5 @@ li {
 }
 
 .task {
-
+    
 }
