Work to make delete lists functional

--- a/views/main.pug
+++ b/views/main.pug
@@ -38,7 +38,9 @@ block content
                 form(method="post" action=`/lists`)
                     input(type="text" name="listName" placeholder="Create list...")
                     button(type="submit")
-                
+                p.main_left_menu_title Delete List
+                form(m)
+
 
         div.main_right
             div.main_right_topbox
