--- a/views/main.pug
+++ b/views/main.pug
@@ -33,7 +33,7 @@ block content
                 ul
                     li All
                     each listName in lists
-                        li= listName.listName
+                        li(onclick=`location.href="../lists/${listName.id}"`)= listName.listName
                 div.new_list
                 form(method="post" action=`/lists`)
                     input(type="text" name="listName" placeholder="Create list...")
