--- a/views/main.pug
+++ b/views/main.pug
@@ -55,7 +55,10 @@ block content
             div.main_right_botbox
                 form(action=`/tasks` method="post" class="task")
                     input(type="text" name="taskContent" placeholder="Add task here...")
-                    button(type="submit")
+                    select(name="listName")
+                        each listName in lists
+                            option(value=listName.id)= listName.listName
+                    button(type="submit") Add To List
                 if allTasks
                     ul
                         each task in allTasks
