--- a/views/list.pug
+++ b/views/list.pug
@@ -31,9 +31,14 @@ block content
             div.lists
                 p.main_left_menu_title Lists
                 ul
-                    li All
-                    each listName in lists
-                        li(onclick=`location.href="../lists/${listName.id}"`)= listName.listName
+                    if !userId
+                        li(onclick='location.href="../users"') All
+                        each listName in lists
+                            li(onclick=`location.href="../lists/${listName.id}"`)= listName.listName
+                    else 
+                        li(onclick='location.href="../demo"') All
+                        each listName in lists
+                            li(onclick=`location.href="../lists/${listName.id}"`)= listName.listName
                 div.new_list
                 form(method="post" action=`/lists`)
                     input(type="text" name="listName" placeholder="Create list...")
