--- a/views/main.pug
+++ b/views/main.pug
@@ -32,6 +32,7 @@ block content
                 a(href="#" id="strawberry")
                     img(src="../images/strawberry.png" id="strawberry" class="navbar_themes")
 
+    
     div.main
         div.main_left
             img(src="../images/default-logo.png" id="logo" class="logoSmall")
@@ -40,12 +41,18 @@ block content
                 ul
                     li All
                     each listName in lists
-                        li= listName.listName
+                        li(onclick=`location.href="../lists/${listName.id}"`)= listName.listName
                 div.new_list
                 form(method="post" action=`/lists`)
                     input(type="text" name="listName" placeholder="Create list...")
                     button(type="submit")
-                
+                p.main_left_menu_title Delete List
+                form(method="post" action="/lists/delete")
+                    select(name="listName")
+                        each listName in lists
+                            option(value=listName.id)= listName.listName
+                    button(type="submit") Delete
+
 
         div.main_right
             div.main_right_topbox
@@ -53,16 +60,18 @@ block content
                 form().tasks_category
                     p.tasks_incomplete Total Tasks
                     p.tasks_complete Completed
+
             div.main_right_bottombox
                 form(action=`/tasks` method="post")
                     input(type="text" name="taskContent" class="add_task_form" placeholder="ADD TASK HERE ...")
                     br
                     button(type="submit" class="saveButton") Save
+
                 if allTasks
                     div.tasks
-                        ul
+                        ol
                             each task in allTasks
-                                li=task.taskContent
+                                li(class="task")=task.taskContent
 
                 //- input(type="checkbox") Buy juice
                 //- input(type="checkbox") Clean out garage
