--- a/public/stylesheets/grape.css
+++ b/public/stylesheets/grape.css
@@ -61,3 +61,26 @@
     width: 250px;
 
 }
+
+.dropdown {
+    font-family: 'Lilita One', cursive;
+    font-size: 30px;
+    background-color: #CCA5C6;
+    color: rgba(255,255,255,.75);
+    border: #CCA5C6 2px ;
+    border-radius: 5px;
+    padding: 2px;
+
+}
+
+.dropdownDelete {
+    font-family: 'Quicksand', sans-serif; 
+    font-size: 15px;
+    background-color: #F7CDDF;
+    color: #4c4e54;
+    border: #F7CDDF 2px ;
+    border-radius: 5px;
+    padding: 3px;
+    margin: 0px 0px 0px 0px;
+}
+
