--- a/public/stylesheets/orange.css
+++ b/public/stylesheets/orange.css
@@ -61,3 +61,26 @@
     width: 250px;
 
 }
+
+.dropdown {
+    font-family: 'Lilita One', cursive;
+    font-size: 30px;
+    background-color: #FFB748;
+    color: rgba(255,255,255,.75);
+    border: #FFB748 2px ;
+    border-radius: 5px;
+    padding: 2px;
+
+}
+
+.dropdownDelete {
+    font-family: 'Quicksand', sans-serif; 
+    font-size: 15px;
+    background-color: #FFCE6D;
+    color: #4c4e54;
+    border: #FFCE6D 2px ;
+    border-radius: 5px;
+    padding: 3px;
+    margin: 0px 0px 0px 0px;
+}
+
