--- a/views/main.pug
+++ b/views/main.pug
@@ -50,12 +50,11 @@ block content
                     input(type="text" name="listName" class="add_list_form" placeholder="CREATE LIST...")
                     button(type="submit" class="saveButton") Add
                 br
-                p.main_left_menu_title Delete List
                 form(method="post" action="/lists/delete")
-                    select(name="listName")
+                    select(name="listName" class="dropdownDelete")
                         each listName in lists
                             option(value=listName.id)= listName.listName
-                    button(type="submit" class="saveButton") Delete
+                    button(type="submit" class="saveButton deleteList") Delete List
 
 
         div.main_right
@@ -67,11 +66,13 @@ block content
             div.main_right_bottombox
                 form(action=`/tasks` method="post")
                     input(type="text" name="taskContent" placeholder="ADD TASK HERE ..." class="add_task_form")
-                    select(name="listName")
+                    select(name="listName" class="dropdown")
                         each listName in lists
                             option(value=listName.id)= listName.listName
+                    br
                     button(type="submit" class="saveButton") Save to List
                 if allTasks
+                    div.tasks
                     ol
                         each task in allTasks
                             li(class="task")=task.taskContent
