--- a/public/stylesheets/apple.css
+++ b/public/stylesheets/apple.css
@@ -42,15 +42,15 @@
 
 .add_task_form {
     width: 300px;
-    height: 40px;
+    height: 50px;
     background-color: #D5FA94;
     border: 0px;
     border-radius: 5px;
     padding: 10px;
     font-family: 'Lilita One', cursive;
     font-size: 25px;
-    color: #157afd;
-    margin-top: 15px;
+    color: hsl(214, 98%, 54%);
+    margin-top: 10px;
     box-sizing: border-box;
 }
 
@@ -63,6 +63,8 @@
 }
 
 .dropdown {
+    height: 50px;
+    margin-top: 10px;
     font-family: 'Lilita One', cursive;
     font-size: 30px;
     background-color: #A9DA58;
