--- a/views/list.pug
+++ b/views/list.pug
@@ -4,30 +4,36 @@ append head
   //- add page specific styles by appending to the head
   link(rel="stylesheet" href="/stylesheets/main.css")
   link(rel="stylesheet" href="/stylesheets/navbar.css")
+  link(rel="stylesheet" href="/stylesheets/strawberry.css" id="flavor")
   //- add page specific js
   script(src="/javascripts/index.js" type="module" defer)
 
 block content
     div.navbar
-        button.navbar_hamburger hamburger menu
-        div.navbar_searchbar Search here
+        div.navbar_hamburger
+            img(src="../images/hamburger-white.png" style="width: 40px; opacity: .80")
+        div.navbar_searchbar
+            img(src="../images/search.png" class="search_glass" style="width: 35px; opacity: .80")
         div.navbar_theme_wrapper
             div.fruit_red
-                img(src="../images/fruits/fruit_red.png" alt="strawberry" class="navbar_themes")
+                a(href="#" id="apple")
+                    img(src="../images/apple.png" class="navbar_themes")
             div.fruit_orange
-                img(src="../images/fruits/fruit_orange.png" alt="pineapple" class="navbar_themes")
+                a(href="#" id="lemon")
+                    img(src="../images/lemon.png" id="lemon" class="navbar_themes")
             div.fruit_yellow
-                img(src="../images/fruits/fruit_yellow.png" alt="lemon" class="navbar_themes")
+                a(href="#" id="orange")
+                    img(src="../images/orange.png" id="orange" class="navbar_themes")
             div.fruit_green
-                img(src="../images/fruits/fruit_green.png" alt="kiwi" class="navbar_themes")
+                a(href="#" id="grape")
+                    img(src="../images/grape.png" id="grape" class="navbar_themes")
             div.fruit_blue
-                img(src="../images/fruits/fruit_blue.png" alt="blueberry" class="navbar_themes")
-            div.fruit_purple
-                img(src="../images/fruits/fruit_purple.png" alt="grape" class="navbar_themes")
+                a(href="#" id="strawberry")
+                    img(src="../images/strawberry.png" id="strawberry" class="navbar_themes")
 
     div.main
         div.main_left
-            img(src="../images/default-logo.png" class="logoSmall")
+            img(src="../images/default-logo.png" id="logo" class="logoSmall")
             div.lists
                 p.main_left_menu_title Lists
                 ul
@@ -41,27 +47,33 @@ block content
                             li(onclick=`location.href="../lists/${listName.id}"`)= listName.listName
                 div.new_list
                 form(method="post" action=`/lists`)
-                    input(type="text" name="listName" placeholder="Create list...")
-                    button(type="submit")
-                p.main_left_menu_title Delete List
+                    input(type="text" name="listName" class="add_list_form" placeholder="CREATE LIST...")
+                    button(type="submit" class="saveButton") Add
+                br
                 form(method="post" action="/lists/delete")
-                    select(name="listName")
+                    select(name="listName" class="dropdownDelete")
                         each listName in lists
                             option(value=listName.id)= listName.listName
-                    button(type="submit") Delete
+                    button(type="submit" class="saveButton deleteList") Delete List
 
 
         div.main_right
             div.main_right_topbox
-                div.inbox Inbox
+                div.inbox
                 form().tasks_category
                     p.tasks_incomplete Tasks
                     p.tasks_complete Completed
-            div.main_right_botbox
-                form(action=`/tasks` method="post" class="task")
-                    input(type="text" name="taskContent" placeholder="Add task here...")
-                    button(type="submit")
+            div.main_right_bottombox
+                form(action=`/tasks` method="post")
+                    input(type="text" name="taskContent" placeholder="ADD TASK HERE ..." class="add_task_form")
+                    select(name="listName" class="dropdown")
+                        each listName in lists
+                            option(value=listName.id)= listName.listName
+                    br
+                    button(type="submit" class="saveButton") Save to List
                 if allTasks
-                    ul
+                    div.tasks
+                    ol
                         each task in allTasks
-                            li=task.taskContent
+                            li(class="task")=task.taskContent
+
