--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -72,16 +72,16 @@ li {
 }
 
 .inbox {
-    height: 100%;
+    height: 10%;
 }
 
 .tasks_category {
     font-size: 16px;
     text-shadow: 1px 1px 3px rgba(107, 119, 118, .5);
     margin: 0px 0px 15px 0px;
-    height: 100%;
+    height: 10%;
     display: grid;
-    grid-template-columns: 120px 0px 1fr;
+    grid-template-columns: 1fr 1fr;
 
 }
 
@@ -110,7 +110,7 @@ li {
     font-size: 16px;
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
-    margin: 8px 0px 0px 0px;
+    margin: 8px 0px 5px 0px;
     padding: 5px 15px 5px 15px;
     text-align: center;
     text-decoration: none;
