--- a/views/main.pug
+++ b/views/main.pug
@@ -11,7 +11,8 @@ append head
 block content
     div.navbar
         div.navbar_hamburger
-            img(src="../images/hamburger-white.png" style="width: 40px; opacity: .80")
+            a(href="/logout")
+                img(src="../images/hamburger-white.png" style="width: 40px; opacity: .80")
         div.navbar_searchbar
             img(src="../images/search.png" class="search_glass" style="width: 35px; opacity: .80")
         div.navbar_theme_wrapper
