--- a/views/list.pug
+++ b/views/list.pug
@@ -11,7 +11,8 @@ append head
 block content
     div.navbar
         div.navbar_hamburger
-            img(src="../images/hamburger-white.png" style="width: 40px; opacity: .80")
+            a(href="/logout")
+                img(src="../images/hamburger-white.png" style="width: 40px; opacity: .80")
         div.navbar_searchbar
             img(src="../images/search.png" class="search_glass" style="width: 35px; opacity: .80")
         div.navbar_theme_wrapper
@@ -60,9 +61,8 @@ block content
         div.main_right
             div.main_right_topbox
                 div.inbox
-                form().tasks_category
-                    p.tasks_incomplete Tasks
-                    p.tasks_complete Completed
+                    p(class="sum")= allTasks.length
+                        p.tasks_incomplete Total Tasks
             div.main_right_bottombox
                 form(action=`/tasks` method="post")
                     input(type="text" name="taskContent" placeholder="ADD TASK HERE ..." class="add_task_form")
@@ -73,7 +73,7 @@ block content
                     button(type="submit" class="saveButton") Save to List
                 if allTasks
                     div.tasks
-                    ol
-                        each task in allTasks
-                            li(class="task")=task.taskContent
+                        ol
+                            each task in allTasks
+                                li(class="task")=task.taskContent
 
