--- a/public/stylesheets/grape.css
+++ b/public/stylesheets/grape.css
@@ -10,7 +10,7 @@
 }
 
 .main_left {
-    background-color:#CCA5C6;
+    background-color:#c8629c;
     display: grid;
     grid-template-rows: 120px 1fr;
     width: 250px;
@@ -59,9 +59,9 @@
     margin-top: 10px;
     font-family: 'Lilita One', cursive;
     font-size: 30px;
-    background-color: #CCA5C6;
+    background-color: #c8629c;
     color: rgba(255,255,255,.75);
-    border: #CCA5C6 2px ;
+    border: #c8629c 2px ;
     border-radius: 5px;
     padding: 2px;
 
