--- a/public/stylesheets/orange.css
+++ b/public/stylesheets/orange.css
@@ -1,6 +1,6 @@
 
 .navbar {
-    background-color: #D26013;
+    background-color: #d96517;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 250px 1fr 300px;
@@ -10,7 +10,7 @@
 }
 
 .main_left {
-    background-color:#EDA842;
+    background-color:#fe9542;
     display: grid;
     grid-template-rows: 120px 1fr;
     width: 250px;
@@ -59,9 +59,9 @@
     margin-top: 10px;
     font-family: 'Lilita One', cursive;
     font-size: 30px;
-    background-color: #EDA842;
+    background-color: #fe9542;
     color: rgba(255,255,255,.75);
-    border: #EDA842 2px ;
+    border: #fe9542 2px ;
     border-radius: 5px;
     padding: 2px;
 
